--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -15,7 +15,6 @@
 .top-nav nav .nav-menu-item{font-size:16px;font-weight:700;}
 .top-nav .btn-application{position:absolute;top:6px;right:0; width:160px;height:42px;line-height:42px;border-radius:21px;color:#fff;font-size:16px;font-weight:700;background:#4fd69e;text-align: center;}
 .top-nav .btn-application:hover{opacity: 0.8;}
-
 .top-nav.on header{background:rgba(255,255,255,1);}
 .container{padding-bottom:130px;}
 .container .btn-wrap{margin-top:60px;}
@@ -48,18 +47,19 @@
 .main-visual .btn-wrap{display: flex;align-items: center;justify-content: center;margin-top:34px;}
 .main-visual .btn-wrap .btn{width:250px;margin-left:12px;color:#fff;font-size:20px;font-weight:700;height:65px;line-height:65px;text-align: center;border-radius:32.5px;}
 .main-visual .btn-wrap .btn:first-child{margin-left:0;}
-.main-visual .btn-wrap .btn:hover{opacity: 0.8;}
-.main-visual .btn-wrap .btn.color01{background: #4fd69e;}
-.main-visual .btn-wrap .btn.color02{background: #af8be0;}
 .main-visual .img{position:absolute;background: url(../images/img_01.png);background-repeat:no-repeat;background-size:100%;transition: 0.3s;}
 .main-visual .img.n1{background-image:url(../images/img_01.png); top:-60px;right:0;width:339px;height:429px;}
-.main-visual .img.n2{background-image:url(../images/img_02.png); top:153px;left:-300px;width:110px;height:43px;}
+.main-visual .img.n2{background-image:url(../images/img_02.png); top:153px;left:-300px;width:110px;height:50px;}
 .main-visual .img.n3{background-image:url(../images/img_03.png); top:0;left:0;width:38px;height: 29px; display: none;}
 .main-visual .img.n4{background-image:url(../images/img_04.png); top:430px;left:569px;width:31px;height:31px;}
 .main-visual .img.n5{background-image:url(../images/img_05.png); top:394px;left:527px;width:64px;height:55px;z-index: -1;}
 .main-visual .img.n6{background-image:url(../images/img_06.png); top:170px;right:-20px;width:44px;height:39px;z-index: -1;}
 .main-visual .img.n7{background-image:url(../images/img_07.png); top:180px;right:-60px;width:64px;height:50px;}
 .main-visual .img.n8{background-image:url(../images/img_08.png); bottom:52px;right:0;width:30px;height:22px;}
+
+.btn-wrap .btn:hover{opacity: 0.8;}
+.btn-wrap .btn.color01{background: #4fd69e;}
+.btn-wrap .btn.color02{background: #af8be0;}
 
 /* tab  */
 .tab-wrap{margin-top:25px;}
@@ -96,121 +96,120 @@
 .video-wrap .video-item .tit{font-size:1.6rem;font-weight:700;color:#333;margin-top:15px;}
 .video-wrap .video-item .txt{font-size:1.4rem;font-weight:400;color:#666;margin-top:3px;}
 
+.dim{position:fixed;width:100%;height:100%;background: rgba(0,0,0,0.6);z-index: 100;opacity:0;transition: 0.3s;}
+.dim.on{opacity: 1;}
+.modal{display:none; position:fixed;top:50%;left:50%;transform: translate(-50%, -50%);width:720px;height:500px;border-radius: 8px;padding:0 27px 46px;background:#fff; transition: 0.3s;z-index: 101;}
+.modal.on{display:block;animation: showModal 0.5s forwards;}
+.modal .modal-header{display:flex;align-items: center; height:55px;}
+.modal .modal-header h2{font-size:20px;line-height:20px;}
+.modal .modal-header .btn-close{margin-left:auto;width:24px;height:24px;background:url(../images/btn_close.png) 50% 50% no-repeat;background-size:24px;}
+.modal .modal-cont .scorll-wrap{height:400px;overflow-y: auto;background:#efefef;padding:20px;}
+.modal .btn-wrap{position:absolute;bottom:-21px;left:50%;transform: translateX(-50%);}
+.modal .btn-wrap .btn{width:327px;height:42px;line-height:42px;color:#fff;font-size:1.6rem;font-weight:700;border-radius: 21px;}
+.modal .btn-wrap .btn:hover{opacity: 1;}
 
 @media screen and (max-width: 850px) {
-    .inner{position:relative;max-width:820px;margin:0 auto; padding:0 24px;}
+  .container{padding-bottom:80px;}
+  .inner{position:relative;max-width:820px;margin:0 auto; padding:0 24px;}
 	.top-nav .btn-application{display:none;}
 	.top-nav .inner{width:100%;height: 55px;}
-    .top-nav nav{display: none; position: absolute;left: 0;top: 50px;width: 100%;padding: 44px 23px;background:#fff;}
-    .top-nav nav ul{display: block;}
-    .top-nav nav ul li{margin:24px 0 0 0;}
-    .top-nav nav ul li:first-child{margin-top:0;}
-    .top-nav .logo{left:24px;}
-	.top-nav .btn-nav{display:block;position:absolute; width:24px;height:24px;background: url(../images/btn_menu.png) 0 0 no-repeat;background-size:100%;top:50%;
-    right:24px; transform: translateY(-50%);transition: 0.3s;}
-    .top-nav nav.on{display:block}
-    .top-nav .btn-nav.on{background-image: url(../images/btn_close.png);}
-    .main-visual{padding:100px 24px 0;}
-    .main-visual .img-title{width:50%;height:auto}
-    .main-visual .img.n1{width:250px;height:304px;right:68px;z-index:-1;}
-    .main-visual .img.n2{top:63px;left:-30px;}
-    .main-visual .img.n4{left:10px;top:51%;}
-    .main-visual .img.n5{left: -30px;top:46%;}
-    .main-visual .img.n6{top:30px;right:7%;}
-    .main-visual .img.n7{top:46px;right:2%;}
-    .main-visual .img.n8{bottom:25%;}
-    .main-visual .img-text{font-size:16px;min-width:240px;margin-top:5px;width:80%;}
+  .top-nav nav{display: none; position: absolute;left: 0;top: 50px;width: 100%;padding: 44px 23px;background:#fff;}
+  .top-nav nav ul{display: block;}
+  .top-nav nav ul li{margin:24px 0 0 0;}
+  .top-nav nav ul li:first-child{margin-top:0;}
+  .top-nav .logo{left:24px;}
+	.top-nav .btn-nav{display:block;position:absolute; width:24px;height:24px;background: url(../images/btn_menu.png) 0 0 no-repeat;background-size:100%;top:50%;right:24px; transform: translateY(-50%);transition: 0.3s;}
+  .top-nav nav.on{display:block}
+  .top-nav .btn-nav.on{background-image: url(../images/btn_close.png);}
+  .main-visual{padding:100px 24px 0;}
+  .main-visual .img-title{width:50%;height:auto}
+  .main-visual .img.n1{width:250px;height:304px;right:68px;z-index:-1;}
+  .main-visual .img.n2{top:63px;left:-30px;}
+  .main-visual .img.n4{left:10px;top:51%;}
+  .main-visual .img.n5{left: -30px;top:46%;}
+  .main-visual .img.n6{top:30px;right:7%;}
+  .main-visual .img.n7{top:46px;right:2%;}
+  .main-visual .img.n8{bottom:25%;}
+  .main-visual .img-text{font-size:16px;min-width:240px;margin-top:5px;width:80%;}
 
-    .main-visual .counter{margin-top:40px;width:100%;height:96px;}
-    .main-visual .counter .title{font-size:14px;border-radius:12px;width:164px;height:24px;line-height:24px;}
-    .main-visual .lg-info .title span{font-size:16px;}
-    .main-visual .lg-info .text{font-size:14px;color:#666;line-height:22px;font-weight:400;}
+  .main-visual .counter{margin-top:40px;width:100%;height:96px;}
+  .main-visual .counter .title{font-size:14px;border-radius:12px;width:164px;height:24px;line-height:24px;}
+  .main-visual .lg-info .title span{font-size:16px;}
+  .main-visual .lg-info .text{font-size:14px;color:#666;line-height:22px;font-weight:400;}
 
-    .main-visual .info-box{margin-top:40px;}
-    .main-visual .info-box .info-box-item{display: block;}
-    .main-visual .info-box .info-box-item dd{margin:2px 0 0 0;word-break: keep-all;}
+  .main-visual .info-box{margin-top:40px;}
+  .main-visual .info-box .info-box-item{display: block;}
+  .main-visual .info-box .info-box-item dd{margin:2px 0 0 0;word-break: keep-all;color:#666;line-height:22px}
 
-    .main-visual .btn-wrap{margin-top:20px;}
-    .main-visual .btn-wrap .btn{height:42px;line-height:42px;font-size:14px;}
+  .main-visual .btn-wrap{margin-top:20px;}
+  .main-visual .btn-wrap .btn{height:42px;line-height:42px;font-size:14px;letter-spacing:-0.5px}
 
-    .tab-menu{flex-wrap:wrap;}
-    .tab-menu.depth2{margin:-8px -4px 0;}
-    .tab-menu.depth2 .tab-btn{margin:8px 4px 0;}
+  .tab-menu{flex-wrap:wrap;}
+  .tab-menu.depth2{margin:-8px -4px 0;}
+  .tab-menu.depth2 .tab-btn{margin:8px 4px 0;}
 
-    .video-wrap .video-item{width:100%;}
-    .video-wrap .video-item .tit{margin-top:18px;}
-    
+  .video-wrap .video-item{width:100%;}
+  .video-wrap .video-item .tit{margin-top:18px;}
 }
 
-@media screen and (max-width: 600px) {
-    .main-visual{padding:130px 24px 0;}
-    .main-visual .img.n1{width:210px;height:254px;right:68px;}
-    .main-visual .img-title{width:80%;}
-    .main-visual .img-text{width:50%}
-    .main-visual .img.n4{top: 54%;}
-    .main-visual .img.n5{top: 50%;}
-    .main-visual .img.n6{right:40px;}
-    .main-visual .img.n7{right:0;}
+@media screen and (max-width: 750px) {
+  .modal{top:0;left:0; width:100%;height: 100%;transform: translate(0, 0);padding:0 24px 90px;}
+  .modal .modal-cont{height:100%;}
+  .modal .modal-cont .scorll-wrap{height:calc(100% - 56px)}
+  .modal .btn-wrap{width:calc(100% - 48px);bottom:24px;}
+  .modal .btn-wrap .btn{width:100%;height:4.3rem;line-height:4.3rem;;}
 
     
+}
+@media screen and (max-width: 600px) {
+  .main-visual{padding:130px 24px 0;}
+  .main-visual .img.n1{width:210px;height:254px;right:68px;}
+  .main-visual .img-title{width:80%;}
+  .main-visual .img-text{width:50%}
+  .main-visual .img.n4{top: 54%;}
+  .main-visual .img.n5{top: 50%;}
+  .main-visual .img.n6{right:40px;}
+  .main-visual .img.n7{right:0;}
 }
 @media screen and (max-width: 500px) {
-    .main-visual{padding:150px 24px 0;}
-    .main-visual .img.n1{width:190px;height:234px;right:68px;}
+  .main-visual{padding:150px 24px 0;}
+  .main-visual .img.n1{width:190px;height:234px;right:68px;}
 }
 @media screen and (max-width: 400px) {
-    .main-visual{padding:160px 24px 0;}
-    .main-visual .img.n1{width:190px;height:234px;right:68px;}
-    .main-visual .img.n4{top: 51%;}
-    .main-visual .img.n5{top: 47%;}
+  .main-visual{padding:160px 24px 0;}
+  .main-visual .img.n1{width:190px;height:234px;right:68px;}
+  .main-visual .img.n4{top: 51%;}
+  .main-visual .img.n5{top: 47%;}
 }
 
 
+.img-title{animation:showUp;animation-duration: 1s; }
+@keyframes showUp {
+  0% {opacity: 0;top:20px  }
+  100% {  opacity: 1; top:0;}
+}
 
-
-.main-visual .img.n1{animation: shakeX;animation-duration: 0.8s;animation-iteration-count: 2;}
+.main-visual .img.n1{animation: shakeX;animation-duration: 1s;animation-iteration-count: 1;opacity: 0;animation-fill-mode: forwards;}
 @keyframes shakeX {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-5px, -8px) rotate(-1deg); }
-  20% { transform: translate(-2px, 0px) rotate(1deg); }
-  30% { transform: translate(9px, 4px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-6px, 3px) rotate(0deg); }
-  70% { transform: translate(12px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% { transform: rotate(0deg); top:-130px;}
+  25% { transform: rotate(5deg); }
+  50% { transform: rotate(0deg); }
+  75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); top:-60px;opacity: 1;}
 }
 
-.main-visual .img.n2{animation-name: swing;transform-origin: top center;animation-duration: 0.5s;animation-delay: 0.3s; animation-iteration-count: 1.5;}
-@keyframes swing {
-  20% {
-    -webkit-transform: rotate3d(0, 0, 1, 15deg);
-    transform: rotate3d(0, 0, 1, 15deg);
+.main-visual .img.n2{animation-name: show;animation-duration: 0.5s;animation-delay: 0.8s; animation-fill-mode: forwards;opacity: 0;}
+@keyframes show {
+  from{
+    opacity: 0;
+    transform: translateY(20px);
   }
-
-  40% {
-    -webkit-transform: rotate3d(0, 0, 1, -10deg);
-    transform: rotate3d(0, 0, 1, -10deg);
-  }
-
-  60% {
-    -webkit-transform: rotate3d(0, 0, 1, 5deg);
-    transform: rotate3d(0, 0, 1, 5deg);
-  }
-
-  80% {
-    -webkit-transform: rotate3d(0, 0, 1, -5deg);
-    transform: rotate3d(0, 0, 1, -5deg);
-  }
-
   to {
-    -webkit-transform: rotate3d(0, 0, 1, 0deg);
-    transform: rotate3d(0, 0, 1, 0deg);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
-.main-visual .img.n4{animation-name: heartBeat;animation-duration: 1s;animation-timing-function: ease-in-out;animation-iteration-count: 2;}
+.main-visual .img.n4{animation-name: heartBeat;animation-duration: 1s;animation-timing-function: ease-in-out;animation-delay: 1.3s; animation-fill-mode: forwards;opacity: 0;}
 @keyframes heartBeat {
   0% {
     -webkit-transform: scale(1);
@@ -236,10 +235,14 @@
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+  100% {
+    opacity: 1;
+  }
 }
-.main-visual .img.n5{animation-name: flip;backface-visibility: visible;animation-duration: 0.6s;animation-delay: 0.5s;}
+.main-visual .img.n5{animation-name: flip;backface-visibility: visible;animation-duration: 0.6s;animation-delay: 1.1s;animation-fill-mode: forwards;opacity: 0;}
 @keyframes flip {
   from {
+    opacity: 0;
     -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
     transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
     -webkit-animation-timing-function: ease-out;
@@ -278,22 +281,22 @@
     transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
     -webkit-animation-timing-function: ease-in;
     animation-timing-function: ease-in;
+    opacity: 1;
   }
 }
 
-.main-visual .img.n7{animation-name: backInRight;animation-duration: 0.4s;animation-delay: 0.3s;animation-timing-function: ease-out;}
-.main-visual .img.n6{animation-name: backInRight;animation-duration: 0.8s;animation-delay: 0.1s;animation-timing-function: ease-out;}
+.main-visual .img.n7{animation-name: backInRight;animation-duration: 0.4s;animation-delay: 0.3s;animation-timing-function: ease-out;transform: translate3d(80px, 0, 0);animation-fill-mode: forwards;opacity: 0;}
+.main-visual .img.n6{animation-name: backInRight;animation-duration: 0.8s;animation-delay: 0.1s;animation-timing-function: ease-out;transform: translate3d(80px, 0, 0);animation-fill-mode: forwards;opacity: 0;}
 @keyframes backInRight {
   from {
-    -webkit-transform: translate3d(100%, 0, 0) skewX(-30deg);
-    transform: translate3d(100%, 0, 0) skewX(-30deg);
+    -webkit-transform: translate3d(100px, 0, 0) skewX(-30deg);
+    transform: translate3d(100px, 0, 0) skewX(-30deg);
     opacity: 0;
   }
 
   60% {
     -webkit-transform: skewX(20deg);
     transform: skewX(20deg);
-    opacity: 1;
   }
 
   80% {
@@ -304,14 +307,16 @@
   to {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    opacity: 1;
   }
 }
 
-.main-visual .img.n8{animation-name: pulse;animation-timing-function: ease-in-out;animation-duration: 0.8s;animation-iteration-count:infinite;}
+.main-visual .img.n8{animation-name: pulse;animation-timing-function: ease-in-out;animation-duration: 0.8s;animation-delay: 1.2s;opacity: 0;animation-fill-mode: forwards;}
 @keyframes pulse {
   from {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1) translateY(10px);
+    opacity: 1;
   }
 
   50% {
@@ -321,6 +326,7 @@
 
   to {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1) translateY(0);
+    opacity: 1;
   }
 }
