--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -19,7 +19,7 @@
 .container{padding-bottom:130px;}
 .container .btn-wrap{margin-top:60px;}
 .container .btn-wrap .btn-application{display:block;width:100%;height:42px;line-height:42px;font-size:16px; color:#fff; background: #4fd69e;border-radius:21px;text-align: center;}
-.container .btn-wrap .btn-share{display:block;margin:13px auto 0; font-size:16px;font-weight:700;position:relative;padding-right:20px;background: url(../images/ico_share.png) 100% 52% no-repeat;background-size: 14px 15px;}
+.container .btn-wrap .btn-share{display:block;margin:13px auto 0; font-size:16px;font-weight:700;position:relative;padding-right:20px;background: url(../images/ico_share.png) 100% 52% no-repeat;background-size: 14px 15px;color:#000;}
 .inner{position:relative;max-width:820px;margin:0 auto;}
 .container .btn-wrap > *:hover{opacity: 0.8;}
 
@@ -34,7 +34,7 @@
 .main-visual .counter .title{position:absolute;top:-15px;left:50%;transform: translateX(-50%); width:212px;height:31px;line-height:31px; background:#21bbff;color:#fff;font-size:18px;font-weight:700;text-align: center;border-radius: 15px;}
 .main-visual .lg-info{position:relative;margin-top:50px;}
 .main-visual .lg-info .title{color:#00bc77;font-size:16px;font-weight:700;background:#fff;}
-.main-visual .lg-info .title span{width:90px;display:inline-block; background:#fff;}
+.main-visual .lg-info .title span{width:90px;display:inline-block; background:#fff;font-weight:700;}
 .main-visual .lg-info .title::before{content:"";position:absolute;width:calc(100% - 90px);height:4px;top:8px;right:0;background:#54ddab;}
 .main-visual .lg-info .text{margin-top:5px;}
 .main-visual .info-box{padding:24px 25px;background:#f7f7f7;margin-top:50px;}
@@ -64,7 +64,7 @@
 /* tab  */
 .tab-wrap{margin-top:25px;}
 .tab-menu{display:flex;align-items: center;margin:0 -6px;}
-.tab-menu .tab-btn{position:relative;margin:0 6px;font-size:2.0rem;;letter-spacing: -0.5px;transition: 0.3s;line-height: 1.4;}
+.tab-menu .tab-btn{position:relative;margin:0 6px;font-size:2.0rem;;letter-spacing: -0.5px;transition: 0.3s;line-height: 1.4;color:#000;}
 .tab-menu .tab-btn:hover{opacity: 0.8;}
 .tab-menu .tab-btn.on{font-weight:700;}
 .tab-menu .tab-btn.on::after{content:'';position:absolute;bottom:2px;left:0;width:100%;height:8px;;background: #ffcf8e;z-index:-1;}
@@ -77,7 +77,8 @@
 .tab-wrap .acco-wrap{margin-top:23px;}
 .faq .acco-wrap{margin-top:17px;}
 .acco-wrap{position:relative;border:1px solid #e0e0e0;border-lefT:0;border-right:0;}
-.acco-wrap .acoo-btn{position:relative;width:100%;text-align: left; padding:15px 30px 15px 0;font-size:1.4rem;line-height:22px;border-top:1px solid #e0e0e0;white-space: inherit;}
+.acco-wrap .acoo-btn{position:relative;width:100%;text-align: left; padding:15px 30px 15px 0;font-size:1.4rem;line-height:22px;border-top:1px solid #e0e0e0;white-space: inherit;color:#000;}
+.acco-wrap .acoo-btn span{color:#000;}
 .acco-wrap .acoo-btn:first-child{border-top:0;}
 .acco-wrap .acoo-btn:after{content:'';position: absolute;top:24px;right:7px;width:12px;height:7px;background: url(../images/icon_acoo_arrow.png) 0 0 no-repeat;background-size:100%;transition: 0.3s;}
 .acco-wrap .acco-cont{display:none;background:#f7f7f7;padding:18px 23px;}
@@ -191,7 +192,7 @@
 
 .main-visual .img.n1{animation: shakeX;animation-duration: 1s;animation-iteration-count: 1;opacity: 0;animation-fill-mode: forwards;}
 @keyframes shakeX {
-  0% { transform: rotate(0deg); top:-130px;}
+  0% { transform: rotate(0deg); top:-130px;opacity: 0;}
   25% { transform: rotate(5deg); }
   50% { transform: rotate(0deg); }
   75% { transform: rotate(-5deg); }
