--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -31,7 +31,7 @@
 .main-visual .img-title img{width:100%;height: 100%;}
 .main-visual .img-text{margin-top:20px;font-size:20px;line-height:24px;letter-spacing: -0.4px;}
 .main-visual .counter{position:relative;;margin-top:60px;width:420px;height:120px;background:#000; box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.16);border-radius:10px;}
-.main-visual .counter .title{position:absolute;top:-15px;left:50%;transform: translateX(-50%); width:212px;height:31px;line-height:31px; background:#21bbff;color:#fff;font-size:18px;font-weight:700;text-align: center;border-radius: 15px;}
+.main-visual .counter .title{position:absolute;top:-15px;left:50%;transform: translateX(-50%); width:212px;height:31px;line-height:31px; background:#21bbff;color:#fff;font-size:18px;font-weight:700;text-align: center;border-radius: 15px;letter-spacing: -1px;}
 .main-visual .lg-info{position:relative;margin-top:50px;}
 .main-visual .lg-info .title{color:#00bc77;font-size:16px;font-weight:700;background:#fff;}
 .main-visual .lg-info .title span{width:90px;display:inline-block; background:#fff;font-weight:700;}
@@ -108,6 +108,9 @@
 .modal .btn-wrap{position:absolute;bottom:-21px;left:50%;transform: translateX(-50%);}
 .modal .btn-wrap .btn{width:327px;height:42px;line-height:42px;color:#fff;font-size:1.6rem;font-weight:700;border-radius: 21px;}
 .modal .btn-wrap .btn:hover{opacity: 1;}
+.modal .modal-cont .scorll-wrap::-webkit-scrollbar {width: 12px;border-radius:4px;}
+.modal .modal-cont .scorll-wrap::-webkit-scrollbar-thumb {border-radius: 6px;background-clip: padding-box;border: 4px solid #efefef;background:#c3c3c3}
+.modal .modal-cont .scorll-wrap::-webkit-scrollbar-track {background-color: transparent; border-radius: 10px;}
 
 @media screen and (max-width: 850px) {
   .container{padding-bottom:80px;}
@@ -190,7 +193,7 @@
   100% {  opacity: 1; top:0;}
 }
 
-.main-visual .img.n1{animation: shakeX;animation-duration: 1s;animation-iteration-count: 1;opacity: 0;animation-fill-mode: forwards;}
+.main-visual .img.n1{animation: shakeX;animation-duration: 1s;opacity: 0;animation-fill-mode: forwards;}
 @keyframes shakeX {
   0% { transform: rotate(0deg); top:-130px;opacity: 0;}
   25% { transform: rotate(5deg); }
