--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -195,11 +195,11 @@
 
 .main-visual .img.n1{animation: shakeX;animation-duration: 1s;opacity: 0;animation-fill-mode: forwards;}
 @keyframes shakeX {
-  0% { transform: rotate(0deg); top:-130px;opacity: 0;}
-  25% { transform: rotate(5deg); }
-  50% { transform: rotate(0deg); }
-  75% { transform: rotate(-5deg); }
-  100% { transform: rotate(0deg); top:-60px;opacity: 1;}
+  0% { -webkit-transform: rotate(0deg);transform: rotate(0deg); top:-130px;opacity: 0;}
+  25% { -webkit-transform: rotate(5deg);transform: rotate(5deg); }
+  50% { -webkit-transform: rotate(0deg);transform: rotate(0deg); }
+  75% { -webkit-transform: rotate(-5deg);transform: rotate(-5deg); }
+  100% { -webkit-transform: rotate(0deg);transform: rotate(0deg); top:-60px;opacity: 1;}
 }
 
 .main-visual .img.n2{animation-name: show;animation-duration: 0.5s;animation-delay: 0.8s; animation-fill-mode: forwards;opacity: 0;}
