--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -42,7 +42,7 @@
 .main-visual .info-box .info-box-item:first-child{margin-top:0;}
 .main-visual .info-box .info-box-item dt{flex:0 60px;}
 .main-visual .info-box .info-box-item dd{margin-left:55px;}
-.main-visual .info-box dt{color:#333;font-size:16px;font-weight:500;}
+.main-visual .info-box dt{color:#333;font-size:16px;font-weight:700;}
 .main-visual .info-box dd{color:#555;font-size:14px;font-weight:400;}
 .main-visual .btn-wrap{display: flex;align-items: center;justify-content: center;margin-top:34px;}
 .main-visual .btn-wrap .btn{width:250px;margin-left:12px;color:#fff;font-size:20px;font-weight:700;height:65px;line-height:65px;text-align: center;border-radius:32.5px;}
@@ -143,6 +143,7 @@
 
   .main-visual .info-box{margin-top:40px;}
   .main-visual .info-box .info-box-item{display: block;}
+  .main-visual .info-box dt{font-weight:500;}
   .main-visual .info-box .info-box-item dd{margin:2px 0 0 0;word-break: keep-all;color:#666;line-height:22px}
 
   .main-visual .btn-wrap{margin-top:20px;}
@@ -187,13 +188,13 @@
 }
 
 
-.img-title{animation:showUp;animation-duration: 1s; }
+.img-title{animation:showUp;animation-duration: 0.6s; }
 @keyframes showUp {
   0% {opacity: 0;top:20px  }
   100% {  opacity: 1; top:0;}
 }
 
-.main-visual .img.n1{animation: shakeX;animation-duration: 1s;opacity: 0;animation-fill-mode: forwards;}
+.main-visual .img.n1{animation: shakeX;animation-duration: .6s;animation-delay: 0.3s; opacity: 0;animation-fill-mode: forwards;}
 @keyframes shakeX {
   0% { -webkit-transform: rotate(0deg);transform: rotate(0deg); top:-130px;opacity: 0;}
   25% { -webkit-transform: rotate(5deg);transform: rotate(5deg); }
@@ -289,8 +290,8 @@
   }
 }
 
-.main-visual .img.n7{animation-name: backInRight;animation-duration: 0.4s;animation-delay: 0.3s;animation-timing-function: ease-out;transform: translate3d(80px, 0, 0);animation-fill-mode: forwards;opacity: 0;}
-.main-visual .img.n6{animation-name: backInRight;animation-duration: 0.8s;animation-delay: 0.1s;animation-timing-function: ease-out;transform: translate3d(80px, 0, 0);animation-fill-mode: forwards;opacity: 0;}
+.main-visual .img.n7{animation-name: backInRight;animation-duration: 0.4s;animation-delay: 0.6s;animation-timing-function: ease-out;transform: translate3d(80px, 0, 0);animation-fill-mode: forwards;opacity: 0;}
+.main-visual .img.n6{animation-name: backInRight;animation-duration: 0.8s;animation-delay: 0.4s;animation-timing-function: ease-out;transform: translate3d(80px, 0, 0);animation-fill-mode: forwards;opacity: 0;}
 @keyframes backInRight {
   from {
     -webkit-transform: translate3d(100px, 0, 0) skewX(-30deg);
