--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -6,7 +6,7 @@
 .top-nav header{position:fixed;width:100%;height:55px;background:rgba(255,255,255,0.2);z-index:1;transition: background 0.3s;}
 .top-nav .logo{position:absolute;top:17px;width:104px;height:24px;}
 .top-nav .logo img{width:100%;height:100%;}
-.top-nav nav{position:absolute;left:161px;top:21px;}
+.top-nav nav{position:absolute;left:50%;top:21px;transform: translateX(-50%);}
 .top-nav nav ul{display: flex;}
 .top-nav nav ul li{margin-left:18px;}
 .top-nav nav ul li a{transition: 0.3s;}
@@ -45,7 +45,7 @@
 .main-visual .info-box dt{color:#333;font-size:16px;font-weight:700;}
 .main-visual .info-box dd{color:#555;font-size:14px;font-weight:400;}
 .main-visual .btn-wrap{display: flex;align-items: center;justify-content: center;margin-top:34px;}
-.main-visual .btn-wrap .btn{width:250px;margin-left:12px;color:#fff;font-size:20px;font-weight:700;height:65px;line-height:65px;text-align: center;border-radius:32.5px;}
+.main-visual .btn-wrap .btn{flex:0 auto;min-width:250px;margin-left:12px;color:#fff;font-size:20px;font-weight:700;height:65px;line-height:65px;text-align: center;border-radius:32.5px;}
 .main-visual .btn-wrap .btn:first-child{margin-left:0;}
 .main-visual .img{position:absolute;background: url(../images/img_01.png);background-repeat:no-repeat;background-size:100%;transition: 0.3s;}
 .main-visual .img.n1{background-image:url(../images/img_01.png); top:-60px;right:0;width:339px;height:429px;}
@@ -147,8 +147,8 @@
   .main-visual .info-box .info-box-item dd{margin:2px 0 0 0;word-break: keep-all;color:#666;line-height:22px}
 
   .main-visual .btn-wrap{margin-top:20px;}
-  .main-visual .btn-wrap .btn{height:42px;line-height:42px;font-size:14px;letter-spacing:-0.5px}
-
+  .main-visual .btn-wrap .btn{min-width:auto;padding:0 15px; height:42px;line-height:42px;font-size:14px;letter-spacing:-0.5px}
+  
   .tab-menu{flex-wrap:wrap;}
   .tab-menu.depth2{margin:-8px -4px 0;}
   .tab-menu.depth2 .tab-btn{margin:8px 4px 0;}
@@ -175,6 +175,9 @@
   .main-visual .img.n5{top: 50%;}
   .main-visual .img.n6{right:40px;}
   .main-visual .img.n7{right:0;}
+  .main-visual .btn-wrap {flex-wrap:wrap;}
+  .main-visual .btn-wrap .btn{width:100%;margin:10px 0 0 0;}
+  .main-visual .btn-wrap .btn:first-child{margin-top:0;}
 }
 @media screen and (max-width: 500px) {
   .main-visual{padding:150px 24px 0;}
@@ -188,19 +191,26 @@
 }
 
 
-.img-title{animation:showUp;animation-duration: 0.6s; }
+.img-title{animation:showUp;animation-duration: 0.9s; }
 @keyframes showUp {
-  0% {opacity: 0;top:20px  }
-  100% {  opacity: 1; top:0;}
+  0% {opacity: 0; transform: translateY(60px); }
+  100% {  opacity: 1; transform: translateY(0);}
 }
 
-.main-visual .img.n1{animation: shakeX;animation-duration: .6s;animation-delay: 0.3s; opacity: 0;animation-fill-mode: forwards;}
-@keyframes shakeX {
+.main-visual .img.n1{animation: shakeX;animation-duration: 1s;animation-delay: 0.3s; opacity: 0;animation-fill-mode: forwards;}
+/* @keyframes shakeX {
   0% { -webkit-transform: rotate(0deg);transform: rotate(0deg); top:-130px;opacity: 0;}
   25% { -webkit-transform: rotate(5deg);transform: rotate(5deg); }
   50% { -webkit-transform: rotate(0deg);transform: rotate(0deg); }
   75% { -webkit-transform: rotate(-5deg);transform: rotate(-5deg); }
   100% { -webkit-transform: rotate(0deg);transform: rotate(0deg); top:-60px;opacity: 1;}
+} */
+@keyframes shakeX {
+  0% { -webkit-transform: rotate(0deg) translateY(-100px);transform: rotate(0deg) translateY(-100px);opacity: 0;}
+  25% { -webkit-transform: rotate(5deg);transform: rotate(5deg); }
+  50% { -webkit-transform: rotate(0deg);transform: rotate(0deg); }
+  75% { -webkit-transform: rotate(-5deg);transform: rotate(-5deg); }
+  100% { -webkit-transform: rotate(0deg);transform: rotate(0deg);  -webkit-transform: rotate(0deg) translateY(0);transform: rotate(0deg) translateY(0);opacity: 1;}
 }
 
 .main-visual .img.n2{animation-name: show;animation-duration: 0.5s;animation-delay: 0.8s; animation-fill-mode: forwards;opacity: 0;}
