--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -117,7 +117,7 @@
   .inner{position:relative;max-width:820px;margin:0 auto; padding:0 24px;}
 	.top-nav .btn-application{display:none;}
 	.top-nav .inner{width:100%;height: 55px;}
-  .top-nav nav{display: none; position: absolute;left: 0;top: 50px;width: 100%;padding: 44px 23px;background:#fff;}
+  .top-nav nav{display: none; position: absolute;left: 0;top: 50px;width: 100%;padding: 44px 23px;background:#fff;transform:initial;}
   .top-nav nav ul{display: block;}
   .top-nav nav ul li{margin:24px 0 0 0;}
   .top-nav nav ul li:first-child{margin-top:0;}
