--- a/resources/css/counter.css
+++ b/resources/css/counter.css
@@ -279,7 +279,8 @@
     .flipper{font-size:19px;}
     .flipper-digit{width:23px;height:30px;}
     .flipper-digit div{font-size:19px !important}
-    .flipper-group label{font-size:15px;}
+    .flipper-group label{font-size:15px; top:9px}
+	
 }
 @media screen and (max-width: 600px) {
     .flipper{font-size:17px;}
@@ -288,6 +289,6 @@
     .flipper-group label{font-size:11px;}
 }
 @media screen and (max-width: 340px) {
-	.flipper-delimiter{display:block;}
-    .flipper-group label{position:absolute;bottom:-14px;left:50%;top:auto; font-size:11px;padding:0;}
+	.flipper-delimiter{display:block;position: relative;top: 5px;}
+    .flipper-group label{position:absolute;bottom:-14px;left:50%;top:auto; font-size:11px;padding:0;text-align: center;}
 }
